--- a/Frontend/wwwroot/css/register.css
+++ b/Frontend/wwwroot/css/register.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-color: dodgerblue;
+    background-color: #2c3e50;
     margin: 0;
     justify-content: center;
     align-items: center;
@@ -34,12 +34,12 @@
     margin-top: 12px;
     border: none;
     border-radius: 6px;
-    background-color: #3a9bdc;
+    background-color: #2c3e50;
     color: white;
     font-size: 15px;
     cursor: pointer;
 }
 
 .register-box button:hover {
-    background-color: lightskyblue;
+    background-color: #1a252f;
 }
