--- a/Frontend/wwwroot/css/login.css
+++ b/Frontend/wwwroot/css/login.css
@@ -4,36 +4,54 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    height: 90vh;
+    height: 100vh;
+    flex-direction: column;
+}
+
+.error-box {
+    display: none; 
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    padding: 20px;
+    border-radius: 8px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .login-box {
     background: white;
-    padding: 30px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    width: 320px;
+    width: 420px;
+    height: 390px;
     text-align: center;
+    font-size: 18px;
 }
 
 .login-box h2 {
     margin-top: 2px;
+    font-size: 30px;
+    margin-bottom: 40px;
 }
 
 .login-box input {
-    width: 80%;
+    width: 97%;
     padding: 10px;
-    margin: 8px 0;
+    margin: 10px 0;
     border: 1px solid #a3a3a3;
     border-radius: 6px;
+    font-size: 15px;
 }
 
 .login-box button {
     width: 80%;
     height: 40px;
-    margin-top: 12px;
+    margin-top: 40px;
+    margin-bottom: 30px;
     border: none;
-    border-radius: 6px;
+    border-radius: 5px;
     background-color: #3a9bdc;
     color: white;
     font-size: 15px;
@@ -42,4 +60,14 @@
 
 .login-box button:hover {
     background-color: lightskyblue;
+}
+
+.login-box a{
+    text-decoration: none;
+    color: black;
+}
+
+.login-box a:hover{
+    text-decoration: underline;
+    color: dodgerblue;
 }
