--- a/Frontend/wwwroot/css/materia.css
+++ b/Frontend/wwwroot/css/materia.css
@@ -157,12 +157,15 @@ body {
     transform: scale(1.05);
 }
 
+
 .materias-grid ul {
     padding: 0;
     margin-top: 20px;
 }
 
 .materias-grid ul li {
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     font-size: 18px;
     background: #fff;
@@ -176,6 +179,20 @@ body {
 
 .materias-grid ul li:hover {
     transform: translateX(3px);
+}
+
+
+.materias-grid button{
+    background-color: darkred;
+    color: white;
+    border: none;
+    padding: 3px 8px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.materias-grid button:hover {
+    background-color: indianred;
 }
 
 .modal {
