Adicionando a section Sequencia na home

--- a/Frontend/wwwroot/css/dashboard.css
+++ b/Frontend/wwwroot/css/dashboard.css
@@ -102,60 +102,42 @@ body {
     width: calc(100% - 250px);
 }
 
-.section {
-    background: white;
+.user-area{
+    font-size: 30px;
+    margin: 15px;
+    font-weight: bold;
+}
+
+.section-materias-destaque {
+    background-color: white;
     padding: 3rem;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     margin-bottom: 3rem;
 }
 
-
-.section-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2rem;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid #ecf0f1;
-}
-
-.section-header h2 {
-    color: #2c3e50;
-    font-size: 1.4rem;
-}
-
-.btn-primary {
-    background: #3498db;
+.streak{
+    background-color: dodgerblue;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    margin-bottom: 3rem;
     color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    font-weight: 500;
-    transition: all 0.3s;
 }
 
-.btn-primary:hover {
-    background-color: lightskyblue;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 10px rgba(52, 152, 219, 0.3);
+.sequencia{
+    margin-top: 30px;
+    text-align: center;
 }
 
-.btn-edit {
-    background: #95a5a6;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s;
-    font-size: 0.9rem;
+.sequencia h2{
+    font-size: 70px;
 }
 
-.btn-edit:hover {
-    background: #7f8c8d;
-    transform: scale(1.05);
+.sequencia p{
+    font-size: 20px;
 }
+
+
+
 
