--- a/Frontend/wwwroot/css/materia.css
+++ b/Frontend/wwwroot/css/materia.css
@@ -133,23 +133,6 @@ body {
     box-shadow: 0 4px 10px rgba(52, 152, 219, 0.3);
 }
 
-.btn-edit {
-    background: #95a5a6;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s;
-    font-size: 0.9rem;
-}
-
-.btn-edit:hover {
-    background: #7f8c8d;
-    transform: scale(1.05);
-}
-
-
 .materias-grid ul {
     padding: 0;
     margin-top: 20px;
@@ -174,7 +157,7 @@ body {
 }
 
 
-.materias-grid button{
+.btn-delete{
     background-color: darkred;
     color: white;
     border: none;
@@ -183,9 +166,22 @@ body {
     cursor: pointer;
 }
 
-.materias-grid button:hover {
+.btn-delete:hover {
     background-color: indianred;
 }
+
+.btn-edit{
+    background-color: darkorange;
+    color: white;
+    border: none;
+    padding: 3px 8px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.btn-edit:hover {
+    background-color: #ffb36a;
+}
+
 
 .modal {
     display: none;
