--- a/Frontend/wwwroot/css/tarefa.css
+++ b/Frontend/wwwroot/css/tarefa.css
@@ -14,7 +14,7 @@ body {
 
 .sidebar {
     width: 250px;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
     color: white;
     padding: 0;
     position: fixed;
@@ -28,7 +28,7 @@ body {
 
 .sidebar-header {
     padding: 2rem 1.5rem;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
 }
 
 .logo {
@@ -53,15 +53,14 @@ body {
 }
 
 .menu-item:hover {
-    background-color: rgb(38, 96, 152);
+    transition: all 0.3s;
     color: white;
-    border-left-color: #3498db;
+    border-left: 8px solid #3498db;
 }
 
 .menu-item.active {
-    background-color: rgb(38, 96, 152);
     color: white;
-    border-left-color: #3498db;
+    border-left: 8px solid #3498db;
 }
 
 .menu-item-icon {
@@ -74,12 +73,12 @@ body {
     bottom: 0;
     width: 100%;
     padding: 1rem 1.5rem;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
 }
 
 .btn-logout {
     width: 100%;
-    background-color: rgb(38, 96, 152);
+    background-color: dodgerblue;
     color: white;
     border: none;
     padding: 0.8rem;
@@ -91,7 +90,6 @@ body {
 }
 
 .btn-logout:hover {
-    background-color: rgb(38, 96, 152);
     transform: translateY(-5px);
 }
 .modal {
@@ -112,7 +110,7 @@ body {
     margin-bottom: 30px;
     border: none;
     border-radius: 5px;
-    background-color: #3a9bdc;
+    background-color: rgb(38, 96, 152);
     color: white;
     font-size: 15px;
     cursor: pointer;
@@ -181,7 +179,7 @@ body {
 }
 
 .btn-primary {
-    background: #3498db;
+    background-color: rgb(38, 96, 152);
     color: white;
     border: none;
     padding: 10px 20px;
@@ -264,14 +262,14 @@ body {
     margin-bottom: 30px;
     border: none;
     border-radius: 5px;
-    background-color: #3a9bdc;
+    background-color: rgb(38, 96, 152);;
     color: white;
     font-size: 15px;
     cursor: pointer;
 }
 
 .modal-content button:hover {
-    background-color: lightskyblue;
+    background-color: dodgerblue;
 }
 
 .modal-content {
