--- a/Frontend/wwwroot/css/materia.css
+++ b/Frontend/wwwroot/css/materia.css
@@ -14,7 +14,7 @@ body {
 
 .sidebar {
     width: 250px;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);;
     color: white;
     padding: 0;
     position: fixed;
@@ -28,7 +28,7 @@ body {
 
 .sidebar-header {
     padding: 2rem 1.5rem;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);;
 }
 
 .logo {
@@ -55,13 +55,13 @@ body {
 .menu-item:hover {
     background-color: rgb(38, 96, 152);
     color: white;
-    border-left-color: #3498db;
+    border-left: 8px solid #3498db;
 }
 
 .menu-item.active {
     background-color: rgb(38, 96, 152);
     color: white;
-    border-left-color: #3498db;
+    border-left: 8px solid #3498db;
 }
 
 .menu-item-icon {
@@ -74,12 +74,12 @@ body {
     bottom: 0;
     width: 100%;
     padding: 1rem 1.5rem;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);;
 }
 
 .btn-logout {
     width: 100%;
-    background-color: rgb(38, 96, 152);
+    background-color: dodgerblue;
     color: white;
     border: none;
     padding: 0.8rem;
@@ -91,7 +91,6 @@ body {
 }
 
 .btn-logout:hover {
-    background-color: rgb(38, 96, 152);
     transform: translateY(-5px);
 }
 
@@ -116,7 +115,7 @@ body {
 }
 
 .btn-primary {
-    background: #3498db;
+    background-color: rgb(38, 96, 152);;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -128,7 +127,7 @@ body {
 }
 
 .btn-primary:hover {
-    background-color: lightskyblue;
+    background-color: dodgerblue;
     transform: translateY(-2px);
     box-shadow: 0 4px 10px rgba(52, 152, 219, 0.3);
 }
@@ -201,14 +200,14 @@ body {
     margin-bottom: 30px;
     border: none;
     border-radius: 5px;
-    background-color: #3a9bdc;
+    background-color: rgb(38, 96, 152);
     color: white;
     font-size: 15px;
     cursor: pointer;
 }
 
 .modal-content button:hover {
-    background-color: lightskyblue;
+    background-color: dodgerblue;
 }
 
 .modal-content {
