--- a/Frontend/wwwroot/css/dashboard.css
+++ b/Frontend/wwwroot/css/dashboard.css
@@ -14,7 +14,7 @@ body {
 
 .sidebar {
     width: 250px;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
     color: white;
     padding: 0;
     position: fixed;
@@ -28,7 +28,7 @@ body {
 
 .sidebar-header {
     padding: 2rem 1.5rem;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
 }
 
 .logo {
@@ -55,13 +55,13 @@ body {
 .menu-item:hover {
     background-color: rgb(38, 96, 152);
     color: white;
-    border-left-color: #3498db;
+    border-left: 8px solid #3498db;
 }
 
 .menu-item.active {
     background-color: rgb(38, 96, 152);
     color: white;
-    border-left-color: #3498db;
+    border-left: 8px solid #3498db;
 }
 
 .menu-item-icon {
@@ -74,12 +74,12 @@ body {
     bottom: 0;
     width: 100%;
     padding: 1rem 1.5rem;
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
 }
 
 .btn-logout {
     width: 100%;
-    background-color: rgb(38, 96, 152);
+    background-color: dodgerblue;
     color: white;
     border: none;
     padding: 0.8rem;
@@ -91,7 +91,6 @@ body {
 }
 
 .btn-logout:hover {
-    background-color: rgb(38, 96, 152);
     transform: translateY(-5px);
 }
 
@@ -106,11 +105,12 @@ body {
     font-size: 30px;
     margin-bottom: 30px;
     font-weight: bold;
+    color: rgb(38, 96, 152);
 }
 
 
 .streak{
-    background-color: dodgerblue;
+    background-color: rgb(38, 96, 152);
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.05);
@@ -132,11 +132,12 @@ body {
 }
 
 .section-materias-destaque {
-    background-color: white;
+    background-color: rgb(38, 96, 152);
     padding: 3rem;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     margin-bottom: 3rem;
+    color: white;
 }
 
 .materias-grid div{
@@ -145,8 +146,8 @@ body {
     padding: 0.4rem;
 }
 .materias-grid div:hover{
-    background-color: rgb(38, 96, 152);
-    color: white;
+    background-color: dodgerblue;
+    transform: translateY(-5px);
 }
 
 
